[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devdox-ai-encryption"
version = "0.1.0"
description = "Protocol-driven encryption service with Fernet implementation and testable fakes"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Hayat Bourgi", email = "hayat.bourgi@montyholding.com"},
    {name = "Mohammad Jaafar", email = "mohamadali.jaafar@montyholding.com"}
]

keywords = ["encryption", "fernet", "protocol", "pluggable", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    "cryptography==44.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/montymobile1/devdox-ai-encryption"
Repository = "https://github.com/montymobile1/devdox-ai-encryption.git"
Documentation = "https://github.com/montymobile1/devdox-ai-encryption#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["encryption_src*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
